--- a/www/index.html
+++ b/www/index.html
@@ -6,8 +6,7 @@
     <title>Fe</title>
 
     <!--  Cuando hago build poner ./, cuando codeo poner / -->
-    <!-- <base href="./"> -->
-    <base href="/">
+    <base href=".">    <!-- <base href="/"> -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,10 +23,10 @@
     <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
     <!-- <link rel="stylesheet" href="../themes/miligram.min.css"> -->
 
-</head>
+<link rel="stylesheet" href="styles.9eb9d6352ad9a0e7a62f.css"></head>
 
 <body>
     <app-root></app-root>
-</body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.c6871e56cb80756a5498.js"></script><script type="text/javascript" src="main.9333947e70a0af9ee9e6.js"></script></body>
 
 </html>
