--- a/src/index.html
+++ b/src/index.html
@@ -3,27 +3,26 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Fe</title>
+    <title>AcordesFacil</title>
 
     <!--  Cuando hago build poner ./, cuando codeo poner / -->
     <!-- <base href="./"> -->
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- <meta   http-equiv="Content-Security-Policy"
-            content="
-                default-src 'self' ws://192.168.0.11:*"> -->
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <script type=”text/javascript” src=”cordova.js”></script>
 
-    <!-- Miligram -->
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
-    <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
-    <!-- <link rel="stylesheet" href="../themes/miligram.min.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/solid.css" integrity="sha384-rdyFrfAIC05c5ph7BKz3l5NG5yEottvO/DQ0dCrwD8gzeQDjYBHNr1ucUpQuljos" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/regular.css" integrity="sha384-z3ccjLyn+akM2DtvRQCXJwvT5bGZsspS4uptQKNXNg778nyzvdMqiGcqHVGiAUyY" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/brands.css" integrity="sha384-QT2Z8ljl3UupqMtQNmPyhSPO/d5qbrzWmFxJqmY7tqoTuT2YrQLEqzvVOP2cT5XW" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/fontawesome.css" integrity="sha384-u5J7JghGz0qUrmEsWzBQkfvc8nK3fUT7DCaQzNQ+q4oEXhGSx+P2OqjWsfIRB8QT" crossorigin="anonymous">
 </head>
 
 <body>
