--- a/www/index.html
+++ b/www/index.html
@@ -3,30 +3,29 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Fe</title>
+    <title>AcordesFacil</title>
 
     <!--  Cuando hago build poner ./, cuando codeo poner / -->
-    <base href=".">    <!-- <base href="/"> -->
-
+    <!-- <base href="./"> -->
+    <base href=".">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- <meta   http-equiv="Content-Security-Policy"
-            content="
-                default-src 'self' ws://192.168.0.11:*"> -->
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <script type=”text/javascript” src=”cordova.js”></script>
 
-    <!-- Miligram -->
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
-    <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
-    <!-- <link rel="stylesheet" href="../themes/miligram.min.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<link rel="stylesheet" href="styles.9eb9d6352ad9a0e7a62f.css"></head>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/solid.css" integrity="sha384-rdyFrfAIC05c5ph7BKz3l5NG5yEottvO/DQ0dCrwD8gzeQDjYBHNr1ucUpQuljos" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/regular.css" integrity="sha384-z3ccjLyn+akM2DtvRQCXJwvT5bGZsspS4uptQKNXNg778nyzvdMqiGcqHVGiAUyY" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/brands.css" integrity="sha384-QT2Z8ljl3UupqMtQNmPyhSPO/d5qbrzWmFxJqmY7tqoTuT2YrQLEqzvVOP2cT5XW" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/fontawesome.css" integrity="sha384-u5J7JghGz0qUrmEsWzBQkfvc8nK3fUT7DCaQzNQ+q4oEXhGSx+P2OqjWsfIRB8QT" crossorigin="anonymous">
+<link rel="stylesheet" href="styles.b24b5833aa8ac6f8cde8.css"></head>
 
 <body>
     <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.c6871e56cb80756a5498.js"></script><script type="text/javascript" src="main.9333947e70a0af9ee9e6.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.c6871e56cb80756a5498.js"></script><script type="text/javascript" src="main.d1fd52506cda8ab0cf45.js"></script></body>
 
 </html>
