Firebase and ohters

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>AcordesFacil</title>
 
-    <!--  Cuando hago build poner ./, cuando codeo poner / -->
+    <!--  Cuando hago build (para android) poner ./, cuando codeo poner / -->
     <base href="./">
     <!-- <base href="/"> -->
 
